Grammar/Autogen/PreciseV5Parser.swift
// Generated from PreciseV5.g4 by ANTLR 4.7.1
import Antlr4

open class PreciseV5Parser: Parser {

	internal static var _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = PreciseV5Parser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(PreciseV5Parser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()

	internal static let _sharedContextCache = PredictionContextCache()

	public
	enum Tokens: Int {
		case EOF = -1, PROGRAM = 1, DECLARE = 2, FUNCTION = 3, END = 4, MAIN = 5, 
                 IF = 6, ELSE = 7, PRINT = 8, READ = 9, WHILE = 10, INT = 11, 
                 FLOAT = 12, CHAR = 13, BOOL = 14, VOID = 15, COLON = 16, 
                 SCOLON = 17, COMA = 18, DOT = 19, RPAREN = 20, LPAREN = 21, 
                 RBRA = 22, LBRA = 23, RCBRA = 24, LCBRA = 25, PLUS = 26, 
                 MIN = 27, DIV = 28, MUL = 29, MOD = 30, GTHAN = 31, LTHAN = 32, 
                 GRTHAN = 33, LSTHAN = 34, NOTEQUAL = 35, EQUAL = 36, AND = 37, 
                 OR = 38, ASSIGN = 39, TRUE = 40, FALSE = 41, CTEINT = 42, 
                 CTEFLOAT = 43, CTEBOOL = 44, CTECHAR = 45, ID = 46, BSPACE = 47
	}

	public
	static let RULE_preciseV5 = 0, RULE_declare = 1, RULE_type = 2, RULE_array = 3, 
            RULE_body = 4, RULE_estatuto = 5, RULE_expresionbool = 6, RULE_function = 7, 
            RULE_expresion = 8, RULE_exp = 9, RULE_termino = 10, RULE_factor = 11, 
            RULE_condicion = 12, RULE_ciclo = 13, RULE_escritura = 14, RULE_lectura = 15, 
            RULE_asignacion = 16, RULE_varcte = 17

	public
	static let ruleNames: [String] = [
		"preciseV5", "declare", "type", "array", "body", "estatuto", "expresionbool", 
		"function", "expresion", "exp", "termino", "factor", "condicion", "ciclo", 
		"escritura", "lectura", "asignacion", "varcte"
	]

	private static let _LITERAL_NAMES: [String?] = [
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, "PROGRAM", "DECLARE", "FUNCTION", "END", "MAIN", "IF", "ELSE", "PRINT", 
		"READ", "WHILE", "INT", "FLOAT", "CHAR", "BOOL", "VOID", "COLON", "SCOLON", 
		"COMA", "DOT", "RPAREN", "LPAREN", "RBRA", "LBRA", "RCBRA", "LCBRA", "PLUS", 
		"MIN", "DIV", "MUL", "MOD", "GTHAN", "LTHAN", "GRTHAN", "LSTHAN", "NOTEQUAL", 
		"EQUAL", "AND", "OR", "ASSIGN", "TRUE", "FALSE", "CTEINT", "CTEFLOAT", 
		"CTEBOOL", "CTECHAR", "ID", "BSPACE"
	]
	public
	static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	override open
	func getGrammarFileName() -> String { return "PreciseV5.g4" }

	override open
	func getRuleNames() -> [String] { return PreciseV5Parser.ruleNames }

	override open
	func getSerializedATN() -> String { return PreciseV5Parser._serializedATN }

	override open
	func getATN() -> ATN { return PreciseV5Parser._ATN }

	override open
	func getVocabulary() -> Vocabulary {
	    return PreciseV5Parser.VOCABULARY
	}

	override public
	init(_ input:TokenStream) throws {
	    RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,PreciseV5Parser._ATN,PreciseV5Parser._decisionToDFA, PreciseV5Parser._sharedContextCache)
	}

	public class PreciseV5Context: ParserRuleContext {
			open
			func PROGRAM() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.PROGRAM.rawValue, 0)
			}
			open
			func ID() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.ID.rawValue, 0)
			}
			open
			func COLON() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.COLON.rawValue, 0)
			}
			open
			func body() -> BodyContext? {
				return getRuleContext(BodyContext.self, 0)
			}
			open
			func END() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.END.rawValue, 0)
			}
			open
			func SCOLON() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.SCOLON.rawValue, 0)
			}
			open
			func declare() -> DeclareContext? {
				return getRuleContext(DeclareContext.self, 0)
			}
			open
			func function() -> [FunctionContext] {
				return getRuleContexts(FunctionContext.self)
			}
			open
			func function(_ i: Int) -> FunctionContext? {
				return getRuleContext(FunctionContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return PreciseV5Parser.RULE_preciseV5
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PreciseV5Listener {
				listener.enterPreciseV5(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PreciseV5Listener {
				listener.exitPreciseV5(self)
			}
		}
	}
	@discardableResult
	 open func preciseV5() throws -> PreciseV5Context {
		var _localctx: PreciseV5Context = PreciseV5Context(_ctx, getState())
		try enterRule(_localctx, 0, PreciseV5Parser.RULE_preciseV5)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(36)
		 	try match(PreciseV5Parser.Tokens.PROGRAM.rawValue)
		 	setState(37)
		 	try match(PreciseV5Parser.Tokens.ID.rawValue)
		 	setState(38)
		 	try match(PreciseV5Parser.Tokens.COLON.rawValue)
		 	setState(40)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == PreciseV5Parser.Tokens.DECLARE.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(39)
		 		try declare()

		 	}

		 	setState(45)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == PreciseV5Parser.Tokens.FUNCTION.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(42)
		 		try function()


		 		setState(47)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(48)
		 	try body()
		 	setState(49)
		 	try match(PreciseV5Parser.Tokens.END.rawValue)
		 	setState(50)
		 	try match(PreciseV5Parser.Tokens.SCOLON.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class DeclareContext: ParserRuleContext {
			open
			func DECLARE() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.DECLARE.rawValue, 0)
			}
			open
			func type() -> [TypeContext] {
				return getRuleContexts(TypeContext.self)
			}
			open
			func type(_ i: Int) -> TypeContext? {
				return getRuleContext(TypeContext.self, i)
			}
			open
			func ID() -> [TerminalNode] {
				return getTokens(PreciseV5Parser.Tokens.ID.rawValue)
			}
			open
			func ID(_ i:Int) -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.ID.rawValue, i)
			}
			open
			func SCOLON() -> [TerminalNode] {
				return getTokens(PreciseV5Parser.Tokens.SCOLON.rawValue)
			}
			open
			func SCOLON(_ i:Int) -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.SCOLON.rawValue, i)
			}
			open
			func array() -> [ArrayContext] {
				return getRuleContexts(ArrayContext.self)
			}
			open
			func array(_ i: Int) -> ArrayContext? {
				return getRuleContext(ArrayContext.self, i)
			}
			open
			func COMA() -> [TerminalNode] {
				return getTokens(PreciseV5Parser.Tokens.COMA.rawValue)
			}
			open
			func COMA(_ i:Int) -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.COMA.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return PreciseV5Parser.RULE_declare
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PreciseV5Listener {
				listener.enterDeclare(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PreciseV5Listener {
				listener.exitDeclare(self)
			}
		}
	}
	@discardableResult
	 open func declare() throws -> DeclareContext {
		var _localctx: DeclareContext = DeclareContext(_ctx, getState())
		try enterRule(_localctx, 2, PreciseV5Parser.RULE_declare)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(52)
		 	try match(PreciseV5Parser.Tokens.DECLARE.rawValue)
		 	setState(53)
		 	try type()
		 	setState(54)
		 	try match(PreciseV5Parser.Tokens.ID.rawValue)
		 	setState(56)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == PreciseV5Parser.Tokens.LBRA.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(55)
		 		try array()

		 	}

		 	setState(65)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == PreciseV5Parser.Tokens.COMA.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(58)
		 		try match(PreciseV5Parser.Tokens.COMA.rawValue)
		 		setState(59)
		 		try match(PreciseV5Parser.Tokens.ID.rawValue)
		 		setState(61)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 		if (//closure
		 		 { () -> Bool in
		 		      let testSet: Bool = _la == PreciseV5Parser.Tokens.LBRA.rawValue
		 		      return testSet
		 		 }()) {
		 			setState(60)
		 			try array()

		 		}



		 		setState(67)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(68)
		 	try match(PreciseV5Parser.Tokens.SCOLON.rawValue)
		 	setState(86)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = {  () -> Bool in
		 	   let testArray: [Int] = [_la, PreciseV5Parser.Tokens.INT.rawValue,PreciseV5Parser.Tokens.FLOAT.rawValue,PreciseV5Parser.Tokens.CHAR.rawValue,PreciseV5Parser.Tokens.BOOL.rawValue]
		 	    return  Utils.testBitLeftShiftArray(testArray, 0)
		 	}()
		 	      return testSet
		 	 }()) {
		 		setState(69)
		 		try type()
		 		setState(70)
		 		try match(PreciseV5Parser.Tokens.ID.rawValue)
		 		setState(72)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 		if (//closure
		 		 { () -> Bool in
		 		      let testSet: Bool = _la == PreciseV5Parser.Tokens.LBRA.rawValue
		 		      return testSet
		 		 }()) {
		 			setState(71)
		 			try array()

		 		}

		 		setState(81)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 		while (//closure
		 		 { () -> Bool in
		 		      let testSet: Bool = _la == PreciseV5Parser.Tokens.COMA.rawValue
		 		      return testSet
		 		 }()) {
		 			setState(74)
		 			try match(PreciseV5Parser.Tokens.COMA.rawValue)
		 			setState(75)
		 			try match(PreciseV5Parser.Tokens.ID.rawValue)
		 			setState(77)
		 			try _errHandler.sync(self)
		 			_la = try _input.LA(1)
		 			if (//closure
		 			 { () -> Bool in
		 			      let testSet: Bool = _la == PreciseV5Parser.Tokens.LBRA.rawValue
		 			      return testSet
		 			 }()) {
		 				setState(76)
		 				try array()

		 			}



		 			setState(83)
		 			try _errHandler.sync(self)
		 			_la = try _input.LA(1)
		 		}
		 		setState(84)
		 		try match(PreciseV5Parser.Tokens.SCOLON.rawValue)

		 	}


		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class TypeContext: ParserRuleContext {
			open
			func INT() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.INT.rawValue, 0)
			}
			open
			func FLOAT() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.FLOAT.rawValue, 0)
			}
			open
			func BOOL() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.BOOL.rawValue, 0)
			}
			open
			func CHAR() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.CHAR.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return PreciseV5Parser.RULE_type
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PreciseV5Listener {
				listener.enterType(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PreciseV5Listener {
				listener.exitType(self)
			}
		}
	}
	@discardableResult
	 open func type() throws -> TypeContext {
		var _localctx: TypeContext = TypeContext(_ctx, getState())
		try enterRule(_localctx, 4, PreciseV5Parser.RULE_type)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(88)
		 	_la = try _input.LA(1)
		 	if (!(//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = {  () -> Bool in
		 	   let testArray: [Int] = [_la, PreciseV5Parser.Tokens.INT.rawValue,PreciseV5Parser.Tokens.FLOAT.rawValue,PreciseV5Parser.Tokens.CHAR.rawValue,PreciseV5Parser.Tokens.BOOL.rawValue]
		 	    return  Utils.testBitLeftShiftArray(testArray, 0)
		 	}()
		 	      return testSet
		 	 }())) {
		 	try _errHandler.recoverInline(self)
		 	}
		 	else {
		 		_errHandler.reportMatch(self)
		 		try consume()
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ArrayContext: ParserRuleContext {
			open
			func LBRA() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.LBRA.rawValue, 0)
			}
			open
			func varcte() -> VarcteContext? {
				return getRuleContext(VarcteContext.self, 0)
			}
			open
			func RBRA() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.RBRA.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return PreciseV5Parser.RULE_array
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PreciseV5Listener {
				listener.enterArray(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PreciseV5Listener {
				listener.exitArray(self)
			}
		}
	}
	@discardableResult
	 open func array() throws -> ArrayContext {
		var _localctx: ArrayContext = ArrayContext(_ctx, getState())
		try enterRule(_localctx, 6, PreciseV5Parser.RULE_array)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(90)
		 	try match(PreciseV5Parser.Tokens.LBRA.rawValue)
		 	setState(91)
		 	try varcte()
		 	setState(92)
		 	try match(PreciseV5Parser.Tokens.RBRA.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class BodyContext: ParserRuleContext {
			open
			func MAIN() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.MAIN.rawValue, 0)
			}
			open
			func LPAREN() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.LPAREN.rawValue, 0)
			}
			open
			func RPAREN() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.RPAREN.rawValue, 0)
			}
			open
			func LCBRA() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.LCBRA.rawValue, 0)
			}
			open
			func RCBRA() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.RCBRA.rawValue, 0)
			}
			open
			func estatuto() -> [EstatutoContext] {
				return getRuleContexts(EstatutoContext.self)
			}
			open
			func estatuto(_ i: Int) -> EstatutoContext? {
				return getRuleContext(EstatutoContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return PreciseV5Parser.RULE_body
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PreciseV5Listener {
				listener.enterBody(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PreciseV5Listener {
				listener.exitBody(self)
			}
		}
	}
	@discardableResult
	 open func body() throws -> BodyContext {
		var _localctx: BodyContext = BodyContext(_ctx, getState())
		try enterRule(_localctx, 8, PreciseV5Parser.RULE_body)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(94)
		 	try match(PreciseV5Parser.Tokens.MAIN.rawValue)
		 	setState(95)
		 	try match(PreciseV5Parser.Tokens.LPAREN.rawValue)
		 	setState(96)
		 	try match(PreciseV5Parser.Tokens.RPAREN.rawValue)
		 	setState(97)
		 	try match(PreciseV5Parser.Tokens.LCBRA.rawValue)
		 	setState(101)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = {  () -> Bool in
		 	   let testArray: [Int] = [_la, PreciseV5Parser.Tokens.DECLARE.rawValue,PreciseV5Parser.Tokens.IF.rawValue,PreciseV5Parser.Tokens.PRINT.rawValue,PreciseV5Parser.Tokens.READ.rawValue,PreciseV5Parser.Tokens.WHILE.rawValue,PreciseV5Parser.Tokens.ID.rawValue]
		 	    return  Utils.testBitLeftShiftArray(testArray, 0)
		 	}()
		 	      return testSet
		 	 }()) {
		 		setState(98)
		 		try estatuto()


		 		setState(103)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(104)
		 	try match(PreciseV5Parser.Tokens.RCBRA.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class EstatutoContext: ParserRuleContext {
			open
			func condicion() -> CondicionContext? {
				return getRuleContext(CondicionContext.self, 0)
			}
			open
			func ciclo() -> CicloContext? {
				return getRuleContext(CicloContext.self, 0)
			}
			open
			func escritura() -> EscrituraContext? {
				return getRuleContext(EscrituraContext.self, 0)
			}
			open
			func lectura() -> LecturaContext? {
				return getRuleContext(LecturaContext.self, 0)
			}
			open
			func asignacion() -> AsignacionContext? {
				return getRuleContext(AsignacionContext.self, 0)
			}
			open
			func declare() -> DeclareContext? {
				return getRuleContext(DeclareContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return PreciseV5Parser.RULE_estatuto
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PreciseV5Listener {
				listener.enterEstatuto(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PreciseV5Listener {
				listener.exitEstatuto(self)
			}
		}
	}
	@discardableResult
	 open func estatuto() throws -> EstatutoContext {
		var _localctx: EstatutoContext = EstatutoContext(_ctx, getState())
		try enterRule(_localctx, 10, PreciseV5Parser.RULE_estatuto)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(112)
		 	try _errHandler.sync(self)
		 	switch (PreciseV5Parser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .IF:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(106)
		 		try condicion()

		 		break

		 	case .WHILE:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(107)
		 		try ciclo()

		 		break

		 	case .PRINT:
		 		try enterOuterAlt(_localctx, 3)
		 		setState(108)
		 		try escritura()

		 		break

		 	case .READ:
		 		try enterOuterAlt(_localctx, 4)
		 		setState(109)
		 		try lectura()

		 		break

		 	case .ID:
		 		try enterOuterAlt(_localctx, 5)
		 		setState(110)
		 		try asignacion()

		 		break

		 	case .DECLARE:
		 		try enterOuterAlt(_localctx, 6)
		 		setState(111)
		 		try declare()

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ExpresionboolContext: ParserRuleContext {
			open
			func expresion() -> [ExpresionContext] {
				return getRuleContexts(ExpresionContext.self)
			}
			open
			func expresion(_ i: Int) -> ExpresionContext? {
				return getRuleContext(ExpresionContext.self, i)
			}
			open
			func AND() -> [TerminalNode] {
				return getTokens(PreciseV5Parser.Tokens.AND.rawValue)
			}
			open
			func AND(_ i:Int) -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.AND.rawValue, i)
			}
			open
			func OR() -> [TerminalNode] {
				return getTokens(PreciseV5Parser.Tokens.OR.rawValue)
			}
			open
			func OR(_ i:Int) -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.OR.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return PreciseV5Parser.RULE_expresionbool
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PreciseV5Listener {
				listener.enterExpresionbool(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PreciseV5Listener {
				listener.exitExpresionbool(self)
			}
		}
	}
	@discardableResult
	 open func expresionbool() throws -> ExpresionboolContext {
		var _localctx: ExpresionboolContext = ExpresionboolContext(_ctx, getState())
		try enterRule(_localctx, 12, PreciseV5Parser.RULE_expresionbool)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(114)
		 	try expresion()
		 	setState(119)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == PreciseV5Parser.Tokens.AND.rawValue || _la == PreciseV5Parser.Tokens.OR.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(115)
		 		_la = try _input.LA(1)
		 		if (!(//closure
		 		 { () -> Bool in
		 		      let testSet: Bool = _la == PreciseV5Parser.Tokens.AND.rawValue || _la == PreciseV5Parser.Tokens.OR.rawValue
		 		      return testSet
		 		 }())) {
		 		try _errHandler.recoverInline(self)
		 		}
		 		else {
		 			_errHandler.reportMatch(self)
		 			try consume()
		 		}
		 		setState(116)
		 		try expresion()


		 		setState(121)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class FunctionContext: ParserRuleContext {
			open
			func FUNCTION() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.FUNCTION.rawValue, 0)
			}
			open
			func ID() -> [TerminalNode] {
				return getTokens(PreciseV5Parser.Tokens.ID.rawValue)
			}
			open
			func ID(_ i:Int) -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.ID.rawValue, i)
			}
			open
			func LPAREN() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.LPAREN.rawValue, 0)
			}
			open
			func RPAREN() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.RPAREN.rawValue, 0)
			}
			open
			func LCBRA() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.LCBRA.rawValue, 0)
			}
			open
			func RCBRA() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.RCBRA.rawValue, 0)
			}
			open
			func type() -> [TypeContext] {
				return getRuleContexts(TypeContext.self)
			}
			open
			func type(_ i: Int) -> TypeContext? {
				return getRuleContext(TypeContext.self, i)
			}
			open
			func VOID() -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.VOID.rawValue, 0)
			}
			open
			func declare() -> DeclareContext? {
				return getRuleContext(DeclareContext.self, 0)
			}
			open
			func estatuto() -> [EstatutoContext] {
				return getRuleContexts(EstatutoContext.self)
			}
			open
			func estatuto(_ i: Int) -> EstatutoContext? {
				return getRuleContext(EstatutoContext.self, i)
			}
			open
			func COMA() -> [TerminalNode] {
				return getTokens(PreciseV5Parser.Tokens.COMA.rawValue)
			}
			open
			func COMA(_ i:Int) -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.COMA.rawValue, i)
			}
			open
			func SCOLON() -> [TerminalNode] {
				return getTokens(PreciseV5Parser.Tokens.SCOLON.rawValue)
			}
			open
			func SCOLON(_ i:Int) -> TerminalNode? {
				return getToken(PreciseV5Parser.Tokens.SCOLON.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return PreciseV5Parser.RULE_function
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PreciseV5Listener {
				listener.enterFunction(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PreciseV5Listener {
				listener.exitFunction(self)
			}
		}
	}
	@discardableResult
	 open func function() throws -> FunctionContext {
		var _localctx: FunctionContext = FunctionContext(_ctx, getState())
		try enterRule(_localctx, 14, PreciseV5Parser.RULE_function)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(122)
		 	try match(PreciseV5Parser.Tokens.FUNCTION.rawValue)
		 	setState(125)
		 	try _errHandler.sync(self)
		 	switch (PreciseV5Parser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .INT:fallthrough
		 	case .FLOAT:fallthrough
		 	case .CHAR:fallthrough
		 	case .BOOL:
		 		setState(123)
		 		try type()

		 		break
